@@ -1,9 +1,5 @@
 As the standard Retry patch, this Retry includes a built-in SRAM expansion patch that's used by default to save the custom checkpoints and death counter. Differently from the normal Retry, the patch also works on SA-1 (using BW-RAM instead of SRAM, but the result is the same), so this can be effectively used as an alternative to the SRAM/BW-RAM Plus patch and the likes. Note, though, that if you've already patched one of those, this feature will be turned off automatically (they can't coexist). Unlike SRAM Plus, this patch should also work on SNES Classic, so you should use it if you care about compatibility with that console. Also, the maximum amount of bytes you can save per save file is 2389 bytes.
-To use it, just open "retry_config/tables.asm" and go to the "save:" table. There, you can add your own addresses to save (more info in the file). Note that, differently from SRAM Plus, the addresses you put in the tables won't be initialized when starting a new save file (in fact, there's no "defaults" table). This was done more as a conveniency and also to not clutter up the file, but it also shouldn't give too many problems since:
-- A lot of the addresses used by SMW are reset on game reset/title screen load.
-- The RAM used by Retry is reset on title screen load and when the file select menu opens.
-- The RAM used by a lot of patches is reset before loading the save file.
-If you need to save something that's not reset, you'll have to reset it manually. This is pretty easy to do, for example with a UberASM code in gamemode 3. The "extra.asm" file includes a routine that is executed during title screen load and when the file select menu opens, so you can use that to reset the addresses. This will make so those addresses are reset properly when a new save file is opened.
+To use it, just open "retry_config/tables.asm" and go to the "save" table. There, you can add your own addresses to save (more info in the file). Similarly to SRAM/BW-RAM Plus, for each address you put in the table, you also need to specify its default value(s) for when a new save file is loaded in the "sram_defaults" tables.
 
 Some examples of addresses that may be useful (you can find more at https://www.smwcentral.net/?p=memorymap&game=smw&region=ram):
 
@@ -16,6 +12,8 @@ Some examples of addresses that may be useful (you can find more at https://www.
     ; Individual Dragon Coin Save patch tables. If you use that patch, you should include these.
     dl $7E1F2F : dw 12      ; $401F2F on SA-1.
     dl $7FA660 : dw $0300   ; $40A660 on SA-1.
+
+(for all of these, the default values need to be all $00).
 
 Q: I'm using SRAM/BW-RAM Plus and I want to save Retry's stuff with them. How do I do it?
 A: If you really need to use those, then you can add these to the "sram_table"/"bw_ram_table":
