@@ -57,3 +57,4 @@ v0.1.9:
 
 v0.2:
     - Fixed issue with the Retry prompt not appearing when !no_prompt_box = 1 and setting !ram_disable_box to #$00.
+    - Added SRAM initialization code for new save files and added "load_new_file" extra routine.
